Fix terminal word wrap

--- a/src/components/terminalAboutMe/TerminalAboutMe.module.css
+++ b/src/components/terminalAboutMe/TerminalAboutMe.module.css
@@ -9,6 +9,7 @@
   position: relative;
   overflow: hidden;
   opacity: 0;
+  overflow-x: auto;
   animation-name: box-open;
   animation-timing-function: steps(1, end);
   animation-fill-mode: forwards;
@@ -48,7 +49,7 @@
 
 .input,
 .output {
-  white-space: pre-wrap;
+  white-space: pre;
   font-family: monospace;
   position: relative;
 }
